test/scc/pp/errors/022.a
022.t:2:1: error: unterminated argument list invoking macro 'A'